# SnapLink

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ObjectAdjustment.m  README.md  README.txt  RGBDsfm.m  align2view.m  ba2D3DboxType  loadSUN3D.m  matchNewImage.m  matchNewImageSetup.m  readSUN3Dannotation.m  readValuesFromTxt.m  setup_env.sh  vision_server.py
distributed/: CMakeLists.txt  cellmate.pro
distributed/data/: Session.h
distributed/front/: main.cpp
distributed/front_end/: FeatureClient.h
distributed/front_end/bosswave/: BWFrontEndServer.cpp  BWFrontEndServer.h  BWServer.h  main.cpp
distributed/front_end/http/: FeatureClient.cpp  FeatureClient.h  HTTPFrontEndServer.cpp  HTTPFrontEndServer.h  main.cpp
distributed/grpc/: FrontService.proto
distributed/process/feature/: FeatureServer.cpp
distributed/process/perspective/: PerspectiveServer.cpp  PerspectiveServer.h  VisibilityClient.h
distributed/process/visibility/: HTTPFrontEndClient.cpp  HTTPFrontEndClient.h  VisibilityServer.cpp  main.cpp
distributed/process/wordSearch/: WordSearchServer.cpp
distributed/proto/: CameraModel.proto  Descriptor.proto  Transform.proto
distributed/src/feature/: WordSearchClient.cpp  main.cpp
distributed/src/front/: BWServer.cpp  main2.cpp  main3.cpp
distributed/src/perspective/: PerspectiveServer.cpp  VisibilityClient.cpp
distributed/src/proto/: FeatureMessage.proto
distributed/src/visibility/: VisibilityServer.cpp
distributed/src/wordSearch/: PerspectiveClient.cpp  WordSearchServer.cpp
label-tool/: CMakeLists.txt  README
label-tool/res/: label_dot.qrc
label-tool/src/: main.cpp  ui_widget.h  widget.cpp  widget.h  widget.ui
label_tool/: CMakeLists.txt
label_tool/src/: OdometryMonoLoc.cpp  OdometryMonoLoc.h  main.cpp
lib/: CMakeLists.txt
lib/adapter/rtabmap/: RTABMapDBAdapter.cpp
lib/algo/: Feature.cpp  Feature.h  Perspective.cpp  Perspective.h  Visibility.h  WordSearch.cpp  WordSearch.h
lib/data/: CameraModel.h  Label.h  Transform.h  Word.h  Words.h  WordsKdTree.cpp  WordsKdTree.h
lib/front_end/bosswave/: BWFrontEnd.cpp  BWFrontEnd.h  BWWorker.cpp  BWWorker.h
lib/front_end/http/: HTTPFrontEnd.cpp  HTTPFrontEnd.h  HTTPServer.cpp
lib/http/: HTTPServer.h
lib/util/: Time.h  Utility.cpp
rtabmap_match/: CMakeLists.txt  MapBuilder.h  main.cpp
rtabmap_match/cameras/: kinect.yaml  lg_g2_mini_2560_1920.yaml
rtabmap_match/src/: BayesFilter.h  CameraCalibrated.cpp  CameraCalibrated.h  CameraCalibratedEvent.h  CameraNetwork.cpp  CameraNetwork.h  CameraNetworkThread.cpp  CameraNetworkThread.h  CameraRGBCalibrated.cpp  CameraRGBCalibrated.h  CameraThreadNonStop.cpp  CameraThreadNonStop.h  CameraThreadStream.cpp  CameraThreadStream.h  DBDriverSqlite3.h  DetectionEvent.cpp  DetectionEvent.h  FailureEvent.cpp  FailureEvent.h  HTTPServer.cpp  HTTPServer.h  ImageEvent.cpp  ImageEvent.h  LICENSE  Localization.cpp  Localization.h  LocalizationThread.cpp  LocalizationThread.h  LocationEvent.cpp  LocationEvent.h  MapBuilder.h  Memory.cpp  Memory.h  MemoryLargeRot.cpp  MemoryLargeRot.h  MemoryLoc.cpp  MemoryLoc.h  MemoryPnP.cpp  MemoryPnP.h  NetworkEvent.cpp  (+23 more)
rtabmap_match/src/DBSCAN/: README.md  dbscan.cpp  dbscan.h
server/: CMakeLists.txt  bw_server.py  cellmate.pro  server.py  setup_env.sh
server/app/standalone/: CMakeLists.txt  cellmate.pro
server/bw_try/: Makefile  bw_try.cpp  bwtest  bwtest.pro  entity.ent  main.cpp  moc_agentconnection.cpp  moc_bosswave.cpp
server/cameras/: kinect.yaml  lg_g2_mini_640_480.yaml
server/core/data/: LabelsSimple.cpp  Signatures.h
server/core/event/: DetectionEvent.cpp  FeatureEvent.cpp  LocationEvent.h  SignatureEvent.h
server/core/stage/: FeatureExtraction.h  SignatureSearch.h  WordSearch.cpp  WordSearch.h
server/core/util/: Time.cpp
server/distributed/: CMakeLists.txt
server/distributed/src/: main.cpp
server/lib/adapter/: RTABMapDBAdapter.cpp  RTABMapDBAdapter.h
server/lib/algo/: Feature.cpp  Perspective.cpp  Perspective.h  PerspectiveDirect.cpp  PerspectiveDirect.h  SignatureSearch.cpp  SignatureSearch.h  Visibility.cpp  WordSearch.cpp  WordSearch.h
server/lib/data/: Label.cpp  Label.h  Session.h  Transform.cpp  Word.cpp  Word.h  Words.h  WordsKdTree.cpp  WordsKdTree.h
server/lib/util/: Time.cpp
server/src/: CameraNetwork.cpp  CameraNetwork.h  Database.cpp  Database.h  DetectionEvent.h  FailureEvent.cpp  FailureEvent.h  FeatureEvent.cpp  FeatureEvent.h  FeatureExtraction.cpp  FeatureExtraction.h  HTTPServer.cpp  HTTPServer.h  ImageEvent.cpp  ImageSearch.cpp  ImageSearch.h  Label.cpp  Labels.h  LabelsSimple.cpp  LabelsSimple.h  Localization.cpp  Localization.h  LocationEvent.cpp  LocationEvent.h  MemoryLoc.cpp  MemoryLoc.h  NetworkEvent.cpp  Perspective.cpp  Perspective.h  RTABMapDBAdapter.cpp  RTABMapDBAdapter.h  Signature.cpp  Signature.h  SignatureEvent.cpp  SignatureEvent.h  SignatureSearch.cpp  SignatureSearch.h  Signatures.h  SignaturesSimple.cpp  SignaturesSimple.h  (+15 more)
server/src/adapter/: Adapter.h  RTABMapDBAdapter.cpp  RTABMapDBAdapter.h
server/src/data/: CameraModel.cpp  CameraModel.h  Label.cpp  Label.h  Labels.h  LabelsSimple.cpp  LabelsSimple.h  PerfData.h  SensorData.cpp  SensorData.h  SessionInfo.h  Signature.cpp  Signature.h  Signatures.h  SignaturesSimple.cpp  SignaturesSimple.h  Transform.cpp  Transform.h  Word.cpp  Word.h  Words.h  WordsKdTree.cpp  WordsKdTree.h
server/src/event/: DetectionEvent.cpp  DetectionEvent.h  FailureEvent.cpp  FailureEvent.h  FeatureEvent.cpp  FeatureEvent.h  ImageEvent.cpp  ImageEvent.h  LocationEvent.cpp  LocationEvent.h  NetworkEvent.cpp  NetworkEvent.h  QueryEvent.cpp  QueryEvent.h  SignatureEvent.cpp  SignatureEvent.h  (+2 more)
server/standalone/: CMakeLists.txt  cellmate.pro  cellmate_backup.pro
src/run/: CMakeLists.txt  Run.cpp  Run.h  run.cpp  run.h
src/standalone/: CMakeLists.txt
standalone/: CMakeLists.txt  cellmate.pro  main.cpp
standalone/data/: Session.h
standalone/event/: DetectionEvent.h  FailureEvent.h  QueryEvent.h
standalone/process/: IdentificationObj.cpp  IdentificationObj.h
standalone/src/: main.cpp
(+370 files in other folders)
