cmake_minimum_required(VERSION 2.8.11)
PROJECT( SDBVision )

SET(CMAKE_AUTOMOC ON)

FIND_PACKAGE(RTABMap REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(PCL 1.7 REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)

SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_CURRENT_SOURCE_DIR}")
FIND_PACKAGE(LibMicroHTTPD REQUIRED)

SET(INCLUDE_DIRS
    ${RTABMap_INCLUDE_DIRS}
    ${OpenCV_INCLUDE_DIRS}
    ${PCL_INCLUDE_DIRS}
    ${Qt5Core_INCLUDE_DIRS}
    ${MHD_INCLUDE_DIRS}
)

SET(LIBRARIES
    ${RTABMap_LIBRARIES}
    ${OpenCV_LIBRARIES}
    ${PCL_LIBRARIES}
    ${Qt5Core_LIBRARIES}
    ${MHD_LIBRARIES}
)

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

FILE(GLOB_RECURSE MATCH_SOURCES "src/*.cpp")

ADD_EXECUTABLE(SDBVision ${MATCH_SOURCES})

TARGET_LINK_LIBRARIES(SDBVision ${LIBRARIES})

